created worker results dto and mapped to response